Updated the auditlogs page
